processed dataset complete

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.52011318, 0.61433915, 0.23391053, 0.01303266],\n",
-       "       [0.29818569, 0.12234651, 0.47522504, 0.90835443],\n",
-       "       [0.86644756, 0.02995438, 0.01958337, 0.30189289],\n",
-       "       [0.70597464, 0.59623566, 0.30169342, 0.6771199 ]])"
+       "array([[0.87977991, 0.83308535, 0.91430117, 0.31586867],\n",
+       "       [0.35422962, 0.09403781, 0.62277316, 0.75753091],\n",
+       "       [0.45003302, 0.4286282 , 0.54048799, 0.48401642],\n",
+       "       [0.06095885, 0.09192488, 0.12194997, 0.05511568]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.33510651, -1.93843195, -1.07630361, -1.50302771])"
+       "array([-1.02537122, -1.26410864, -1.01654115, -1.20467096])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.17451664, -0.04295278, -0.17867638, -0.08806414])"
+       "array([ 0.33478386,  0.58379577, -0.3247892 ,  0.0334105 ])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.59768027, 0.34071892, 0.25760309, 0.47509997])"
+       "array([0.43625035, 0.36191906, 0.54987807, 0.40313292])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.61304391, 0.35929108, 0.26780197, 0.48950639])"
+       "array([0.40213132, 0.261333  , 0.58163057, 0.39994255])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.21194173, 0.26665424, 0.16318547, 0.34352161])"
+       "array([0.2934619 , 0.30459194, 0.28342923, 0.25537772])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.21746984, -0.20894652, -0.18749617, -0.12581238])"
+       "array([ 0.34879176,  0.9906965 , -0.33608922,  0.03747832])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.28146156, 0.50151305, 0.16474759, 0.5052507 ])"
+       "array([0.27655781, 0.43623291, 0.25980167, 0.30171461])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.25673806, 0.36471469, 0.17888672, 0.44957061])"
+       "array([0.28842111, 0.24959854, 0.27710812, 0.31794459])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,10 +204,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meanx</th>\n",
+       "      <th>stdX</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.43625</td>\n",
+       "      <td>0.293462</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     meanx      stdX\n",
+       "0  0.43625  0.293462"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myDict = {\"meanx\":mean,\"stdX\":std}\n",
+    "\n",
+    "df = pd.DataFrame([myDict])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'meanx': 0.43625035245991867, 'stdX': 0.29346189819412055}"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myDict = {\"meanx\":mean[0],\"stdX\":std[0]}\n",
+    "myDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame([myDict])\n",
+    "df.to_csv(\"d.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meanx</th>\n",
+       "      <th>stdX</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.436250</td>\n",
+       "      <td>0.293462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.361919</td>\n",
+       "      <td>0.304592</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      meanx      stdX\n",
+       "0  0.436250  0.293462\n",
+       "0  0.361919  0.304592"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"d.csv\")\n",
+    "newDict = {\"meanx\":mean[1],\"stdX\":std[1]}\n",
+    "newdf = pd.DataFrame([newDict])\n",
+    "df.append(newdf)"
+   ]
   },
   {
    "cell_type": "code",
